Adding world statistic by sountry

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,12 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/action_plots"
-            android:title="@string/plots_menu"
+            android:id="@+id/action_home"
+            android:title="@string/plots_home"
             app:showAsAction="never" />
     <item
             android:id="@+id/action_world"
             android:title="@string/world_menu"
+            app:showAsAction="never" />
+
+    <item
+            android:id="@+id/action_plots"
+            android:title="@string/plots_menu"
             app:showAsAction="never" />
 
 </menu>
